--- a/app/Resources/views/portals/serviceuser/index.html.twig
+++ b/app/Resources/views/portals/serviceuser/index.html.twig
@@ -1,17 +1,20 @@
 {% extends '_base.html.twig' %}
 
 {% block body %}
-    <h1>Rosters list</h1>
+    <h1>Rosters list for
+        {{ serviceUser.firstName }} {{ serviceUser.lastName }}</h1>
+
     <ul>
         <li>
-            <a href="{{ path('roster_new') }}" class="btn btn-success btn-sm" role="button">Create a new roster</a>
+            <a href="{{ path('portal_serviceuser_newroster',{ 'serviceUser': serviceUser.id }) }}"
+               class="btn btn-success btn-sm" role="button">Create a new roster</a>
         </li>
     </ul>
     <table>
         <thead>
         <tr>
             <th></th>
-            <th>Serviceuserid</th>
+
             <th>Start time</th>
             <th>End time</th>
             <th>Duration</th>
@@ -26,17 +29,18 @@
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('roster_show', { 'id': roster.id }) }}" class="btn btn-success btn-sm"
+                            <a href="{{ path('portal_roster_show', { 'id': roster.id }) }}"
+                               class="btn btn-success btn-sm"
                                role="button">View</a>
                         </li>
                         <li>
-                            <a href="{{ path('roster_edit', { 'id': roster.id }) }}" class="btn btn-success btn-sm"
+                            <a href="{{ path('portal_roster_edit', { 'id': roster.id }) }}"
+                               class="btn btn-success btn-sm"
                                role="button">Edit</a>
                         </li>
                     </ul>
                 </td>
 
-                <td>{{ roster.serviceUserId }}</td>
                 <td>{% if roster.rosterStartTime %}{{ roster.rosterStartTime|date('D d-m-y H:i:s') }}{% endif %}</td>
                 <td>{% if roster.rosterEndTime %}{{ roster.rosterEndTime|date('D d-m-y H:i:s') }}{% endif %}</td>
                 <td>{{ roster.rosterEndTime.diff(roster.rosterStartTime )|date("%H:%i ") }}</td>
