--- a/src/Bundle/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/Bundle/AppBundle/Resources/views/Default/index.html.twig
@@ -45,7 +45,22 @@
 
             <a href="{{ path('customer_index') }}" class="btn btn-info" role="button">Customers</a>
         </li>
+        <li>
 
+            <a href="{{ path('security_login') }}">
+
+                <img src="/images/login.png" alt="customer" height="32" width="32"></a>
+
+            <a href="{{ path('security_login') }}" class="btn btn-info" role="button">Login</a>
+        </li>
+        <li>
+
+            <a href="{{ path('security_logout') }}">
+
+                <img src="/images/logout.png" alt="customer" height="32" width="32"></a>
+
+            <a href="{{ path('security_logout') }}" class="btn btn-info" role="button">Logout</a>
+        </li>
 
     </ul>
 
